sesion8/bitnami.yaml
apiVersion: v1
kind: Pod
metadata:
  name: validate-roles
spec:
  containers:
  - name: kubectl
    image: bitnami/kubectl:latest
    command:
    - sleep
    - "3600"
  serviceAccountName: ckad
