sesion8/deploySecurity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  MYAPP
  namespace: default
  labels:
    app:  MYAPP
spec:
  selector:
    matchLabels:
      app: MYAPP
  replicas: 1
  template:
    metadata:
      labels:
        app:  MYAPP
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
      containers:
      - name:  MYAPP
        image:  MYAPP:latest
        securityContext:
          runAsUser: 1000
          runAsGroup: 3000
        ports:
        - containerPort:  80
          name:  MYAPP
