sesion8/securityContext.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-pod
spec:
  containers:
  - name: security-container
    image: ubuntu
    command: ["/bin/sh", "-c", "echo cka! && sleep 3600"]
    securityContext:
      runAsUser: 1000
      runAsGroup: 3000
